<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Dradddle</string>
    <string name="search">Pesquisar</string>
    <string name="drawer_open">Menu aberto</string>
    <string name="drawer_close">Menu fechado</string>
    <string name="home">Início</string>
    <string name="dribbble">Dribbble</string>
    <string name="about">Sobre</string>
    <string name="settings">Configurações</string>
    <string name="without_connection">Sem conexão</string>
    <string name="popular">Popular</string>
    <string name="recent">Recente</string>
    <string name="debuts">Estréia</string>
    <string name="loading">Carregando…</string>
    <string name="interface_settings">Configurações de interface</string>
    <string name="about_the_app">Sobre o aplicativo</string>
    <string name="rate_the_app">Avalie</string>
    <string name="publish_a_review">Publique uma revisão sobre o Dradddle</string>
    <string name="share_the_app">Compartilhe</string>
    <string name="share_the_app_with_your_friends">Compartilhe o Dradddle com seus amigos</string>
    <string name="report_a_bug">Reporte um erro</string>
    <string name="tell_us_about_a_crash">Conte-nos sobre um acidente, um problema de design, travamentos…</string>
    <string name="an_idea_to_improve">Uma idéia para melhorar o Dradddle?</string>
    <string name="send_us_your_ideas_and_suggestions">Envie-nos suas idéias e sugestões</string>
    <string name="like_the_dradddle">Gostou do Dradddle?</string>
    <string name="send_us_your_feedback">Conte-nos suas experiências e opiniões</string>
    <string name="contact_us">Contate-nos</string>
    <string name="send_us_a_email">Envie-nos um email</string>
    <string name="choose_app">Escolha um aplicativo</string>
    <string name="suggestions">Sugestões</string>
    <string name="new_bug">Novo erro</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contato</string>
    <string name="back_again_to_exit">Pressione voltar novamente para sair</string>
    <string name="ask_to_exit">Perguntar ao sair</string>
    <string name="display_an_alert_to_exit">Exibir um alerta perguntando se deseja sair</string>
    <string name="share_app_message">Instale o Dradddle e visualize as imagens do Dribbble mais
        facilmente. Baixe agora o aplicativo no link %s e comece a usar.</string>
    <string name="version_app">Versão %s</string>
    <string name="open_source_licenses">Licenças de código aberto</string>
    <string name="software_developer">Desenvolvedor de Software</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed faucibus purus.
        Donec ac tincidunt lorem, vel lacinia dolor. Duis viverra vitae nunc eu feugiat.
        In dictum ipsum metus, in sagittis felis elementum ac. Fusce facilisis, mauris id
        consectetur lobortis, ante ex suscipit quam, at gravida leo nisi dignissim ipsum.
        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Aenean tincidunt faucibus quam, ac semper erat malesuada sit amet.
        Etiam mollis sagittis imperdiet. Cras vitae lorem consectetur, blandit orci vel,
        porttitor nisl. Nam non consectetur sapien, nec maximus tortor. Fusce eu tortor est.
        Aenean aliquet dui vitae metus dapibus, commodo egestas tellus condimentum. Quisque at
        ex ligula. Nam a volutpat nisl. Nullam quis mauris non orci dictum elementum sit
        amet quis nisi. Vestibulum eget facilisis augue. Proin eu laoreet libero.
        Proin feugiat pharetra lacus, eu facilisis leo fringilla vel. In sapien eros,
        vehicula vitae consectetur eget, interdum at erat.
    </string>

</resources>